tests/Semantic/test_2_r02.out
Error type 2 at Line 8: undefined function: add
