tests/Semantic/test_2_r02.spl
int inc(int n)
{
  return n + 1;
}
int test_2_r02()
{
  int k = 4;
  int r = add(k);
  return r;
}
